--- a/src/android/build.gradle
+++ b/src/android/build.gradle
@@ -14,4 +14,6 @@ allprojects {
 
 dependencies {
     implementation 'com.google.android.gms:play-services-pay:16.1.0'
+    implementation 'com.google.android.gms:play-services-wallet:19.1.0'
+
 }
